# energy-text2sql

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements-deploy.txt
agent/: base.py  baseline.py  finetuned.py  multi.py  qwen_base.py  retrieval.py
db/: 02_schema_chunks.sql  init.sql
etl/: 01_load_eia.py  02_load_noaa.py  03_schema_docs.py  04_build_schema_chunks.py
eval/: README.md  dataset.jsonl  run.py  scorer.py
scripts/: demo.sh  seed_neon.py
server/: main.py
static/: index.html
