[project]
name = "energy-text2sql"
version = "0.1.0"
description = "Multi-agent text-to-SQL for US electricity grid data"
requires-python = "==3.12.*"
dependencies = [
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "anthropic>=0.103.0",
    "langgraph>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
