[project]
name = "energy-text2sql"
version = "0.1.0"
description = "Multi-agent text-to-SQL for US electricity grid data"
requires-python = "==3.12.*"
dependencies = [
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "anthropic>=0.103.0",
    "langgraph>=1.2.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pandas>=3.0.3",
    "sentence-transformers>=5.6.0",
    "pgvector>=0.4.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
